--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,11 @@
 {
     "manifest_version": 2,
     "name": "eAsistent+",
+    "applications": {
+        "gecko": {
+            "id": "easistent_plus@femboy.si"
+        }
+    },
     "version": "1.1.3",
     "description": "Makes eAsistent actually usable.",
     "icons": {
