--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,12 @@
 {
     "manifest_version": 2,
     "name": "eAsistent+",
-    "version": "1.1.5",
+    "applications": {
+        "gecko": {
+            "id": "easistent_plus@femboy.si"
+        }
+    },
+    "version": "1.1.6",
     "description": "Makes eAsistent actually usable.",
     "icons": {
         "16": "icons/16.png",
