--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,7 @@
             "id": "easistent_plus@femboy.si"
         }
     },
-    "version": "1.1.6",
+    "version": "1.2.0.0",
     "description": "Makes eAsistent actually usable.",
     "icons": {
         "16": "icons/16.png",
@@ -43,6 +43,9 @@
             ],
             "run_at": "document_end"
         }
+    ],
+    "web_accessible_resources":[
+        "student_app.js"
     ],
     "permissions": [
         "storage",
